namespaces/live.cloud-platform.service.justice.gov.uk/mlops-deployment-example-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "mlops-deployment-example-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "dev"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "mlops-examples"
    cloud-platform.justice.gov.uk/application: "MLops Deployment Example"
    cloud-platform.justice.gov.uk/owner: "PEMS: michael.hodge@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/mlops-deployment-example"
    cloud-platform.justice.gov.uk/team-name: "mlops-examples"
    cloud-platform.justice.gov.uk/review-after: "2024-07-16"
